[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-forecast"
version = "0.1.0"
description = "Predict when your LLM spending will exceed budget"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "prophet>=1.1.5",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
token-forecast = "token_forecast.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
